[FIX] chat and profile overflow, set max length of user profile

--- a/srcs/services/frontend/src/css/chat.css
+++ b/srcs/services/frontend/src/css/chat.css
@@ -38,9 +38,13 @@ a, a > i{
 .chatHead {
     color :#a676ff;
 }
+
 .chatLog {
-    overflow-y: auto;
+    /* overflow-y: auto; */
+    overflow-x: auto!important;
     height:200px;
+    white-space: nowrap;
+    /* max-width: 100%; */
     /* width : 90%; */
     /* margin-left : 10px; */
     /* margin-right : 10px */
@@ -49,6 +53,7 @@ a, a > i{
     margin-bottom:10px;
     background-color: rgba(255, 255, 255, 0.7);
     overflow-wrap: break-word;
+
 }
 
 .friend-row {
@@ -68,4 +73,9 @@ a, a > i{
 .chatFooter, .blockUser{
     /* background-color: #e884f1; */
     text-align: right;
+
+}
+
+.conchasuwrawra{
+    text-wrap: wrap;
 }
